Several code cleanups, including fixing misspelled words and common Java issues (#2131)